syntax = "proto3";

import "google/api/client.proto";

option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";
option objc_class_prefix = "HLW";

package helloworld;

// The greeting service definition.  "" */ fun `unsafe comment `() 123
service Greeter {

    // Sends a greeting  "" */ fun `unsafe comment `() 123
    rpc SayHello (HelloRequest) returns (HelloReply){
        option (google.api.method_signature) = "name";
    };

    // Streams many greetings  "" */ fun `unsafe comment `() 123
    rpc SayHelloStreaming (stream HelloRequest) returns (stream HelloReply);

    // Sends many greetings  "" */ fun `unsafe comment `() 123
    rpc SayHelloClientStreaming (stream HelloRequest) returns (HelloReply);

    // Receives many greetings  "" */ fun `unsafe comment `() 123
    rpc SayHelloServerStreaming (HelloRequest) returns (stream HelloReply){
        option (google.api.method_signature) = "name";
    };
}

// The request message containing the user's name.
message HelloRequest {
    string name = 1;
}

// The response message containing the greetings
message HelloReply {
    string message = 1;
}